--- a/po/el.po
+++ b/po/el.po
@@ -8,14 +8,15 @@ msgstr ""
 "Project-Id-Version: el\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-05 10:33+0100\n"
-"PO-Revision-Date: 2009-12-27 22:46+0100\n"
-"Last-Translator: George Vasilakos <forfolias@linuxteam.cs.teilar.gr>\n"
+"PO-Revision-Date: 2012-04-08 12:48+0200\n"
+"Last-Translator: George <forfolias@gmail.com>\n"
 "Language-Team: Greek <nls@tux.hellug.gr>\n"
 "Language: el\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Pootle 1.1.0\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.0.5\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
@@ -177,7 +178,7 @@ msgstr "Εμφάνιση άλλων εργασιών"
 
 #: ../src/interface.c:336
 msgid "Show full cmdline"
-msgstr ""
+msgstr "Εμφάνιση πλήρους γραμμής εντολών"
 
 #: ../src/interface.c:341
 msgid "Show memory used by cache as free"
