--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -9,14 +9,15 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.4.0-rc1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-05 10:33+0100\n"
-"PO-Revision-Date: 2009-07-26 09:19+0200\n"
-"Last-Translator: 羅廷中 <timloo0710@gmail.com>\n"
+"PO-Revision-Date: 2012-04-14 07:34+0200\n"
+"Last-Translator: Walter <wwycheuk@gmail.com>\n"
 "Language-Team: Tradictional Chinese <zh-l10n@linux.org.tw>\n"
-"Language: \n"
+"Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Pootle 1.1.0\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Pootle 2.0.5\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
@@ -178,7 +179,7 @@ msgstr "顯示其他工作"
 
 #: ../src/interface.c:336
 msgid "Show full cmdline"
-msgstr ""
+msgstr "顯示完整指令"
 
 #: ../src/interface.c:341
 msgid "Show memory used by cache as free"
@@ -212,15 +213,15 @@ msgstr "LXDE 專案的輕量級工作管理員"
 
 #: ../src/interface.c:621
 msgid "Preferences"
-msgstr ""
+msgstr "偏好設定"
 
 #: ../src/interface.c:625
 msgid "General"
-msgstr ""
+msgstr "一般"
 
 #: ../src/interface.c:626
 msgid "Refresh rate (seconds):"
-msgstr ""
+msgstr "更新速度 (秒)："
 
 #: ../src/utils.c:43
 msgid "Error"
