--- a/po/nl.po
+++ b/po/nl.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-05 10:33+0100\n"
-"PO-Revision-Date: 2012-01-06 13:37+0200\n"
+"PO-Revision-Date: 2012-04-14 11:45+0200\n"
 "Last-Translator: Pjotr <>\n"
 "Language-Team: Dutch\n"
 "Language: nl\n"
@@ -232,4 +232,4 @@ msgstr "Fout"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr "Bevestig"
+msgstr "Bevestigen"
