--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.4.0-rc1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-05 10:33+0100\n"
-"PO-Revision-Date: 2012-04-14 07:34+0200\n"
+"PO-Revision-Date: 2012-04-16 06:29+0200\n"
 "Last-Translator: Walter <wwycheuk@gmail.com>\n"
 "Language-Team: Tradictional Chinese <zh-l10n@linux.org.tw>\n"
 "Language: zh_TW\n"
@@ -58,7 +58,7 @@ msgstr "確定終止這個程式？"
 #: ../src/functions.c:148
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr "記憶體：%2$d MB 中的 %1$d MB 已使用"
+msgstr "記憶體：已使用 %2$d MB 中的 %1$d MB"
 
 #: ../src/functions.c:156
 #, c-format
