--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: lxtask 0.1.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-05 10:33+0100\n"
-"PO-Revision-Date: 2011-06-01 07:35-0300\n"
-"Last-Translator: Sérgio Cipolla <secipolla@gmail.com>\n"
+"PO-Revision-Date: 2012-01-06 02:02+0200\n"
+"Last-Translator: Henrique P. <zehrique@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar2.conectiva.com.br>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
@@ -182,7 +182,7 @@ msgstr "Mostrar outras tarefas"
 
 #: ../src/interface.c:336
 msgid "Show full cmdline"
-msgstr ""
+msgstr "Mostrar linha de comandos completa"
 
 #: ../src/interface.c:341
 msgid "Show memory used by cache as free"
