--- a/po/lt.po
+++ b/po/lt.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-05 10:33+0100\n"
-"PO-Revision-Date: 2011-01-04 23:20+0200\n"
-"Last-Translator: Julius <zadintuvas@gmail.com>\n"
+"PO-Revision-Date: 2012-05-17 09:16+0200\n"
+"Last-Translator: Algimantas <margevicius.algimantas@mail.ru>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n"
-"%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%"
+"100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.0.5\n"
 "X-Language: lt_LT\n"
 
@@ -96,7 +96,7 @@ msgstr "Komanda"
 
 #: ../src/interface.c:181
 msgid "User"
-msgstr "Vartotojas"
+msgstr "Naudotojas"
 
 #: ../src/interface.c:190
 msgid "CPU%"
@@ -168,7 +168,7 @@ msgstr "   10"
 
 #: ../src/interface.c:321
 msgid "Show user tasks"
-msgstr "Rodyti vartotojo procesus"
+msgstr "Rodyti naudotojo procesus"
 
 #: ../src/interface.c:326
 msgid "Show root tasks"
@@ -184,7 +184,7 @@ msgstr "Rodyti visą komandą"
 
 #: ../src/interface.c:341
 msgid "Show memory used by cache as free"
-msgstr "Rodyti cache atmintį kaip laisvą"
+msgstr "Podėlio atmintį rodyti kaip laisvą"
 
 #: ../src/interface.c:373
 msgid ""
@@ -197,7 +197,9 @@ msgstr ""
 #. TRANSLATORS: Replace this string with your names, one name per line.
 #: ../src/interface.c:378
 msgid "translator-credits"
-msgstr "Julius Vitkauskas <zadintuvas@gmail.com>"
+msgstr ""
+"Julius Vitkauskas <zadintuvas@gmail.com>\n"
+"Algimantas Margevičius <margevicius.algimantas@gmail.com>"
 
 #: ../src/interface.c:387 ../src/interface.c:389
 msgid "LXTask"
@@ -210,7 +212,7 @@ msgstr "Autorinės teisės (C) 2008 LXDE komanda"
 
 #: ../src/interface.c:393
 msgid "Lightweight task manager for LXDE project"
-msgstr "Lengviasvorė LXDE projekto procesų tvarkyklė"
+msgstr "Lengva LXDE projekto procesų tvarkyklė"
 
 #: ../src/interface.c:621
 msgid "Preferences"
