--- a/po/eu.po
+++ b/po/eu.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-05 10:33+0100\n"
-"PO-Revision-Date: 2007-01-16 12:48+0100\n"
-"Last-Translator: Piarres Beobide <pi@beobide.net>\n"
+"PO-Revision-Date: 2012-07-09 00:48+0200\n"
+"Last-Translator: Asier_Iturralde_Sarasola <asier.iturralde@gmail.com>\n"
 "Language-Team: librezale <librezale@librezale.org>\n"
-"Language: \n"
+"Language: eu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.0.5\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
@@ -65,15 +65,15 @@ msgstr ""
 
 #: ../src/interface.c:69
 msgid "_File"
-msgstr ""
+msgstr "_Fitxategia"
 
 #: ../src/interface.c:77
 msgid "_View"
-msgstr ""
+msgstr "_Ikusi"
 
 #: ../src/interface.c:83
 msgid "_Help"
-msgstr ""
+msgstr "_Laguntza"
 
 #: ../src/interface.c:110
 msgid "cpu usage"
@@ -141,39 +141,39 @@ msgstr "Hil"
 
 #: ../src/interface.c:262
 msgid "Priority"
-msgstr ""
+msgstr "Lehentasuna"
 
 #: ../src/interface.c:275
 msgid "  -10"
-msgstr ""
+msgstr "  -10"
 
 #: ../src/interface.c:280
 msgid "  -5"
-msgstr ""
+msgstr "  -5"
 
 #: ../src/interface.c:285
 msgid "    0"
-msgstr ""
+msgstr "    0"
 
 #: ../src/interface.c:290
 msgid "   5"
-msgstr ""
+msgstr "   5"
 
 #: ../src/interface.c:295
 msgid "   10"
-msgstr ""
+msgstr "   10"
 
 #: ../src/interface.c:321
 msgid "Show user tasks"
-msgstr "Erabiltzaile atazak bistarazi"
+msgstr "Erakutsi erabiltzaile atazak"
 
 #: ../src/interface.c:326
 msgid "Show root tasks"
-msgstr "Root atazak bistarazi"
+msgstr "Erakutsi root atazak"
 
 #: ../src/interface.c:331
 msgid "Show other tasks"
-msgstr "Beste atazak bistarazi"
+msgstr "Erakutsi beste atazak"
 
 #: ../src/interface.c:336
 msgid "Show full cmdline"
@@ -181,7 +181,7 @@ msgstr ""
 
 #: ../src/interface.c:341
 msgid "Show memory used by cache as free"
-msgstr "Bistarazo katxeak erabilitako memoria libre bezala"
+msgstr "Erakutsi cacheak erabilitako memoria libre bezala"
 
 #: ../src/interface.c:373
 msgid ""
@@ -192,16 +192,16 @@ msgstr ""
 #. TRANSLATORS: Replace this string with your names, one name per line.
 #: ../src/interface.c:378
 msgid "translator-credits"
-msgstr ""
+msgstr "Asier Iturralde Sarasola <asier.iturralde@gmail.com>"
 
 #: ../src/interface.c:387 ../src/interface.c:389
 msgid "LXTask"
-msgstr ""
+msgstr "LXTask"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:392
 msgid "Copyright (C) 2008 LXDE team"
-msgstr ""
+msgstr "Copyright-a (C) 2008 LXDE taldea"
 
 #: ../src/interface.c:393
 msgid "Lightweight task manager for LXDE project"
@@ -209,11 +209,11 @@ msgstr ""
 
 #: ../src/interface.c:621
 msgid "Preferences"
-msgstr ""
+msgstr "Hobespenak"
 
 #: ../src/interface.c:625
 msgid "General"
-msgstr ""
+msgstr "Orokorra"
 
 #: ../src/interface.c:626
 msgid "Refresh rate (seconds):"
@@ -221,11 +221,11 @@ msgstr ""
 
 #: ../src/utils.c:43
 msgid "Error"
-msgstr ""
+msgstr "Errorea"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr ""
+msgstr "Berretsi"
 
 #~ msgid "%0.0f %%"
 #~ msgstr "%% %0.0f "
