--- a/po/hu.po
+++ b/po/hu.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-05 10:33+0100\n"
-"PO-Revision-Date: 2010-01-23 18:31+0200\n"
-"Last-Translator: Laszlo Dvornik <dvornik@gnome.hu>\n"
+"PO-Revision-Date: 2012-08-23 15:26+0200\n"
+"Last-Translator: Bendegúz <gyonkibendeguz@gmail.com>\n"
 "Language-Team: Hungarian <hu@li.org>\n"
 "Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 2.0.1\n"
+"X-Generator: Pootle 2.0.5\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
@@ -140,7 +140,7 @@ msgstr "Leállítás"
 
 #: ../src/interface.c:257
 msgid "Kill"
-msgstr "Kilövés"
+msgstr "Kényszerített leállítás"
 
 #: ../src/interface.c:262
 msgid "Priority"
@@ -166,17 +166,32 @@ msgstr "   5"
 msgid "   10"
 msgstr "   10"
 
+# Igaz, hogy:
+# tasks > feladatok ÉS
+# task manager > feladatkezelő DE!
+# 
+# Ebben a szövegkörnyezetben a folyamat elnevezés egyértelműbb, ezért ez használandó.
 #: ../src/interface.c:321
 msgid "Show user tasks"
-msgstr "Felhasználói feladatok megjelenítése"
+msgstr "Felhasználói folyamatok megjelenítése"
 
+# Igaz, hogy:
+# tasks > feladatok ÉS
+# task manager > feladatkezelő DE!
+# 
+# Ebben a szövegkörnyezetben a folyamat elnevezés egyértelműbb, ezért ez használandó.
 #: ../src/interface.c:326
 msgid "Show root tasks"
-msgstr "Root feladatok megjelenítése"
+msgstr "Root folyamatok megjelenítése"
 
+# Igaz, hogy:
+# tasks > feladatok ÉS
+# task manager > feladatkezelő DE!
+# 
+# Ebben a szövegkörnyezetben a folyamat elnevezés egyértelműbb, ezért ez használandó.
 #: ../src/interface.c:331
 msgid "Show other tasks"
-msgstr "Egyéb feladatok megjelenítése"
+msgstr "Egyéb folyamatok megjelenítése"
 
 #: ../src/interface.c:336
 msgid "Show full cmdline"
@@ -191,15 +206,16 @@ msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
-"Az LXTask az Xfce4 feladatkezelőből származik, amit:\n"
-"  * Johannes Zellner <webmaster@nebulon.de> írt"
+"Az LXTask az Xfce4 feladatkezelőből lett kifejlesztve.\n"
+"Eredeti készítő: Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace this string with your names, one name per line.
 #: ../src/interface.c:378
 msgid "translator-credits"
 msgstr ""
 "Dvornik László <dvornik@gnome.hu>\n"
-"Szervác Attila <sas@321.hu>"
+"Szervác Attila <sas@321.hu>\n"
+"Gyönki Bendegúz <gyeben@gyeben.tk>"
 
 #: ../src/interface.c:387 ../src/interface.c:389
 msgid "LXTask"
