Commit from LXDE Translation Project with Pootle by user psokol.: 49 of 49 messages translated (0 fuzzy).

--- a/po/pl.po
+++ b/po/pl.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: lxtask 0.1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-05 10:33+0100\n"
-"PO-Revision-Date: 2012-09-09 10:25+0200\n"
+"PO-Revision-Date: 2012-09-09 10:30+0200\n"
 "Last-Translator: Piotr <psokol@jabster.pl>\n"
 "Language-Team: Polish <>\n"
 "Language: pl\n"
@@ -204,7 +204,7 @@ msgstr ""
 "Piotr Maliński <admin@rk.edu.pl>, 2006.\n"
 "Grzegorz Gibas <amigib@gmail.com>, 2009.\n"
 "Artur Kruszewski <mazdac@gmail.com>, 2009.\n"
-"Piotr Sokół <psokol@jabster.pl>, 2010, 2011."
+"Piotr Sokół <psokol@jabster.pl>, 2010, 2011, 2012."
 
 #: ../src/interface.c:387 ../src/interface.c:389
 msgid "LXTask"
