--- a/po/ko.po
+++ b/po/ko.po
@@ -1,33 +1,34 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Korean translation for lxtask package
+# Copyright (C) 2009-2012 Frer software foundation Inc.
+# This file is distributed under the same license as the lxtask package.
+# Seong-ho Cho <darkcircle.0426@gmail.com>, 2012.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-05 10:33+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2012-04-05 20:41+0900\n"
+"Last-Translator: Seong-ho Cho <darkcircle.0426@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: ko\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
-msgstr ""
+msgstr "실행중인 프로세스를 관리합니다"
 
 #: ../lxtask.desktop.in.h:2
 msgid "Process manager"
-msgstr ""
+msgstr "프로세스 관리자"
 
-#: ../lxtask.desktop.in.h:3 ../src/interface.c:55
+#: ../lxtask.desktop.in.h:3
+#: ../src/interface.c:55
 msgid "Task Manager"
-msgstr ""
+msgstr "작업 관리자"
 
 #: ../src/xfce-taskmanager-linux.c:271
 #, c-format
@@ -36,190 +37,197 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"%d 시그널을 ID %d 작업에 보낼 수 없습니다\n"
+"\n"
+"%s"
 
 #: ../src/xfce-taskmanager-linux.c:285
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr ""
+msgstr "%d 우선순위를 ID 작업 %d에 설정할 수 없습니다"
 
 #: ../src/callbacks.c:58
 msgid "Really kill the task?"
-msgstr ""
+msgstr "정말로 작업을 죽이시겠습니까?"
 
 #: ../src/callbacks.c:62
 msgid "Really terminate the task?"
-msgstr ""
+msgstr "정말로 작업을 중단하시겠습니까?"
 
 #: ../src/functions.c:148
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr ""
+msgstr "메모리: %d MB를 %d MB중 사용함"
 
 #: ../src/functions.c:156
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr ""
+msgstr "CPU 사용량: %0.0f %%"
 
 #: ../src/interface.c:69
 msgid "_File"
-msgstr ""
+msgstr "파일(_F)"
 
 #: ../src/interface.c:77
 msgid "_View"
-msgstr ""
+msgstr "보기(_V)"
 
 #: ../src/interface.c:83
 msgid "_Help"
-msgstr ""
+msgstr "도움말(_H)"
 
 #: ../src/interface.c:110
 msgid "cpu usage"
-msgstr ""
+msgstr "CPU 사용량"
 
 #: ../src/interface.c:121
 msgid "memory usage"
-msgstr ""
+msgstr "메모리 사용량"
 
 #: ../src/interface.c:149
 msgid "more details"
-msgstr ""
+msgstr "자세히"
 
 #: ../src/interface.c:175
 msgid "Command"
-msgstr ""
+msgstr "명령"
 
 #: ../src/interface.c:181
 msgid "User"
-msgstr ""
+msgstr "사용자"
 
 #: ../src/interface.c:190
 msgid "CPU%"
-msgstr ""
+msgstr "CPU%"
 
 #: ../src/interface.c:196
 msgid "RSS"
-msgstr ""
+msgstr " RSS"
 
 #: ../src/interface.c:202
 msgid "VM-Size"
-msgstr ""
+msgstr "VM-크기"
 
 #: ../src/interface.c:208
 msgid "PID"
-msgstr ""
+msgstr "PID"
 
 #: ../src/interface.c:214
 msgid "State"
-msgstr ""
+msgstr "상태"
 
 #: ../src/interface.c:220
 msgid "Prio"
-msgstr ""
+msgstr "우선순위"
 
 #: ../src/interface.c:226
 msgid "PPID"
-msgstr ""
+msgstr "PPID"
 
 #: ../src/interface.c:242
 msgid "Stop"
-msgstr ""
+msgstr "멈춤"
 
 #: ../src/interface.c:247
 msgid "Continue"
-msgstr ""
+msgstr "진행"
 
 #: ../src/interface.c:252
 msgid "Term"
-msgstr ""
+msgstr "중단"
 
 #: ../src/interface.c:257
 msgid "Kill"
-msgstr ""
+msgstr "죽이기"
 
 #: ../src/interface.c:262
 msgid "Priority"
-msgstr ""
+msgstr "우선순위"
 
 #: ../src/interface.c:275
 msgid "  -10"
-msgstr ""
+msgstr "  -10"
 
 #: ../src/interface.c:280
 msgid "  -5"
-msgstr ""
+msgstr "  -5"
 
 #: ../src/interface.c:285
 msgid "    0"
-msgstr ""
+msgstr "    0"
 
 #: ../src/interface.c:290
 msgid "   5"
-msgstr ""
+msgstr "   5"
 
 #: ../src/interface.c:295
 msgid "   10"
-msgstr ""
+msgstr "   10"
 
 #: ../src/interface.c:321
 msgid "Show user tasks"
-msgstr ""
+msgstr "사용자 작업 표시"
 
 #: ../src/interface.c:326
 msgid "Show root tasks"
-msgstr ""
+msgstr "루트 작업 표시"
 
 #: ../src/interface.c:331
 msgid "Show other tasks"
-msgstr ""
+msgstr "다른 작업 표시"
 
 #: ../src/interface.c:336
 msgid "Show full cmdline"
-msgstr ""
+msgstr "전체 명령줄 표시"
 
 #: ../src/interface.c:341
 msgid "Show memory used by cache as free"
-msgstr ""
+msgstr "캐시로 사용하고 남은 메모리 용량 표시"
 
 #: ../src/interface.c:373
 msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
+"LXTask는 Xfce4 작업 관리자로부터\n"
+"Johannes Zellner <webmaster@nebulon.de>가 계승했습니다."
 
 #. TRANSLATORS: Replace this string with your names, one name per line.
 #: ../src/interface.c:378
 msgid "translator-credits"
-msgstr ""
+msgstr "Seong-ho Cho <darkcircle.0426@gmail.com>"
 
-#: ../src/interface.c:387 ../src/interface.c:389
+#: ../src/interface.c:387
+#: ../src/interface.c:389
 msgid "LXTask"
-msgstr ""
+msgstr "LXTask"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:392
 msgid "Copyright (C) 2008 LXDE team"
-msgstr ""
+msgstr "Copyright (C) 2008 LXDE team"
 
 #: ../src/interface.c:393
 msgid "Lightweight task manager for LXDE project"
-msgstr ""
+msgstr "LXDE프로젝트를 위한 가벼운 작업 관리자"
 
 #: ../src/interface.c:621
 msgid "Preferences"
-msgstr ""
+msgstr "기본 설정"
 
 #: ../src/interface.c:625
 msgid "General"
-msgstr ""
+msgstr "일반"
 
 #: ../src/interface.c:626
 msgid "Refresh rate (seconds):"
-msgstr ""
+msgstr "새로 고침 주기 (초):"
 
 #: ../src/utils.c:43
 msgid "Error"
-msgstr ""
+msgstr "오류"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr ""
+msgstr "확인"
+
