--- a/po/tr.po
+++ b/po/tr.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-05 10:33+0100\n"
-"PO-Revision-Date: 2011-03-17 21:01+0200\n"
-"Last-Translator: enginmanap <enginmanap@gmail.com>\n"
+"PO-Revision-Date: 2012-05-06 11:39+0200\n"
+"Last-Translator: Necdet <necdetyucel@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: tr\n"
 "MIME-Version: 1.0\n"
@@ -178,7 +178,7 @@ msgstr "Öteki görevleri göster"
 
 #: ../src/interface.c:336
 msgid "Show full cmdline"
-msgstr ""
+msgstr "Tüm komutsatırını göster"
 
 #: ../src/interface.c:341
 msgid "Show memory used by cache as free"
