--- a/po/uk.po
+++ b/po/uk.po
@@ -3,15 +3,15 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.4.0-rc1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 15:31+0200\n"
-"PO-Revision-Date: 2012-02-19 11:26+0200\n"
-"Last-Translator: Y P <yupadmin@gmail.com>\n"
+"PO-Revision-Date: 2012-09-23 22:29+0200\n"
+"Last-Translator: LStranger <andrej@rep.kiev.ua>\n"
 "Language-Team: Ukrainian\n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.0.5\n"
 
 #: ../lxtask.desktop.in.h:1 ../src/interface.c:55
@@ -52,7 +52,7 @@ msgstr "Дійсно перервати процес?"
 
 #: ../src/callbacks.c:86
 msgid "Can't stop process self"
-msgstr ""
+msgstr "Процес не може зупинити сам себе"
 
 #: ../src/functions.c:148
 #, c-format
