--- a/po/sr.po
+++ b/po/sr.po
@@ -9,15 +9,16 @@ msgstr ""
 "Project-Id-Version: LXTask x\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 15:31+0200\n"
-"PO-Revision-Date: 2009-09-08 15:36+0100\n"
-"Last-Translator: Jay A. Fleming <tito.nehru.naser@gmail.com>\n"
+"PO-Revision-Date: 2012-09-23 23:13+0200\n"
+"Last-Translator: Jay A. <tito.nehru.naser@gmail.com>\n"
 "Language-Team: \n"
-"Language: \n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Pootle 2.0.5\n"
 
 #: ../lxtask.desktop.in.h:1 ../src/interface.c:55
 msgid "Task Manager"
@@ -56,8 +57,9 @@ msgid "Really terminate the task?"
 msgstr "Желите ли да зауставите овај процес?"
 
 #: ../src/callbacks.c:86
+#, fuzzy
 msgid "Can't stop process self"
-msgstr ""
+msgstr "Процес не може сам себе зауставити"
 
 #: ../src/functions.c:148
 #, c-format
@@ -183,7 +185,7 @@ msgstr "Прикажи остале процесе"
 
 #: ../src/interface.c:350
 msgid "Show full cmdline"
-msgstr ""
+msgstr "Прикажи пуну линију наредбе"
 
 #: ../src/interface.c:355
 msgid "Show memory used by cache as free"
