--- a/po/nl.po
+++ b/po/nl.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 15:31+0200\n"
-"PO-Revision-Date: 2012-04-14 11:45+0200\n"
-"Last-Translator: Pjotr <>\n"
+"PO-Revision-Date: 2012-09-25 23:15+0200\n"
+"Last-Translator: Pjotr <pjotrvertaalt@gmail.com>\n"
 "Language-Team: Dutch\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
@@ -58,7 +58,7 @@ msgstr "Taak echt afsluiten?"
 
 #: ../src/callbacks.c:86
 msgid "Can't stop process self"
-msgstr ""
+msgstr "Kan proces zelf niet stilzetten"
 
 #: ../src/functions.c:148
 #, c-format
