--- a/po/bg.po
+++ b/po/bg.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 15:31+0200\n"
-"PO-Revision-Date: 2012-04-07 09:54+0200\n"
+"PO-Revision-Date: 2012-09-30 08:30+0200\n"
 "Last-Translator: Радослав <reckku@gmail.com>\n"
 "Language-Team: MIME-Version: 1.0\n"
 "Language: bg\n"
@@ -57,7 +57,7 @@ msgstr "Наистина ли ще преустановите задачата?"
 
 #: ../src/callbacks.c:86
 msgid "Can't stop process self"
-msgstr ""
+msgstr "Процесът не може да бъде спрян самостоятелно"
 
 #: ../src/functions.c:148
 #, c-format
