--- a/po/id.po
+++ b/po/id.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 15:31+0200\n"
-"PO-Revision-Date: 2012-04-09 14:59+0200\n"
-"Last-Translator: andika <andika@gmail.com>\n"
+"PO-Revision-Date: 2012-10-01 02:24+0200\n"
+"Last-Translator: Andika <andika@gmail.com>\n"
 "Language-Team: Indonesian <translation-team-id@lists.sourceforge.net>\n"
 "Language: id\n"
 "MIME-Version: 1.0\n"
@@ -56,7 +56,7 @@ msgstr "Yakin tutup tugas?"
 
 #: ../src/callbacks.c:86
 msgid "Can't stop process self"
-msgstr ""
+msgstr "Tak bisa menghentikan proses ini sendiri"
 
 #: ../src/functions.c:148
 #, c-format
