--- a/po/pt.po
+++ b/po/pt.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 15:31+0200\n"
-"PO-Revision-Date: 2012-05-18 15:09-0000\n"
-"Last-Translator: Sérgio Marques <smarquespt@gmail.com>\n"
+"PO-Revision-Date: 2012-10-07 02:51+0200\n"
+"Last-Translator: Sérgio <smarquespt@gmail.com>\n"
 "Language-Team: Portuguese PT\n"
 "Language: pt\n"
 "MIME-Version: 1.0\n"
@@ -59,7 +59,7 @@ msgstr "Tem a certeza de que quer terminar a tarefa?"
 
 #: ../src/callbacks.c:86
 msgid "Can't stop process self"
-msgstr ""
+msgstr "Não pode parar o seu processo"
 
 #: ../src/functions.c:148
 #, c-format
