--- a/po/gl.po
+++ b/po/gl.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 15:31+0200\n"
-"PO-Revision-Date: 2012-01-05 18:17+0200\n"
+"PO-Revision-Date: 2012-10-12 10:40+0200\n"
 "Last-Translator: mbouzada <mbouzada@gmail.com>\n"
 "Language-Team: Proxecto Trasno <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -56,7 +56,7 @@ msgstr "Desexa terminar esta tarefa?"
 
 #: ../src/callbacks.c:86
 msgid "Can't stop process self"
-msgstr ""
+msgstr "O proceso non pode deterse a si mesmo"
 
 #: ../src/functions.c:148
 #, c-format
@@ -66,7 +66,7 @@ msgstr "Memoria: usados %d MB de %d MB"
 #: ../src/functions.c:156
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr "Uso da CPU: %0.0f %%"
+msgstr "Uso da CPU: %0.de %%"
 
 #: ../src/interface.c:70
 msgid "_File"
