--- a/po/de.po
+++ b/po/de.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 15:31+0200\n"
-"PO-Revision-Date: 2011-04-26 00:16+0200\n"
-"Last-Translator: Christoph <cwickert@fedoraproject.org>\n"
+"PO-Revision-Date: 2012-10-13 22:36+0200\n"
+"Last-Translator: Daniel <d@winzen4.de>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
@@ -61,7 +61,7 @@ msgstr "Prozess wirklich beenden?"
 
 #: ../src/callbacks.c:86
 msgid "Can't stop process self"
-msgstr ""
+msgstr "Prozess kann nicht selbst beendet werden"
 
 #: ../src/functions.c:148
 #, c-format
