Commit from LXDE Translation Project with Pootle by user hironao.: 50 of 50 messages translated (0 fuzzy).

--- a/po/ja.po
+++ b/po/ja.po
@@ -57,7 +57,7 @@ msgstr "本当にこのタスクを終了しますか?"
 
 #: ../src/callbacks.c:86
 msgid "Can't stop process self"
-msgstr ""
+msgstr "自分自身を停止することはできません"
 
 #: ../src/functions.c:148
 #, c-format
