--- a/po/he.po
+++ b/po/he.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 15:31+0200\n"
-"PO-Revision-Date: 2011-11-13 15:44+0200\n"
+"PO-Revision-Date: 2012-10-12 14:39+0200\n"
 "Last-Translator: Yaron <sh.yaron@gmail.com>\n"
 "Language: he\n"
 "MIME-Version: 1.0\n"
@@ -55,12 +55,12 @@ msgstr "באמת לחסל את המשימה?"
 
 #: ../src/callbacks.c:86
 msgid "Can't stop process self"
-msgstr ""
+msgstr "לא ניתן לעצור את התהליך עצמו"
 
 #: ../src/functions.c:148
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr "זכרון: %d מ״ב מתוך %d מ״ב בשימוש"
+msgstr "זיכרון: %d מ״ב מתוך %d מ״ב בשימוש"
 
 #: ../src/functions.c:156
 #, c-format
@@ -85,7 +85,7 @@ msgstr "ניצול המעבד"
 
 #: ../src/interface.c:135
 msgid "memory usage"
-msgstr "ניצול הזכרון"
+msgstr "ניצול הזיכרון"
 
 #: ../src/interface.c:163
 msgid "more details"
@@ -109,7 +109,7 @@ msgstr "RSS"
 
 #: ../src/interface.c:216
 msgid "VM-Size"
-msgstr "גודל הזכרון הווירטואלי"
+msgstr "גודל הזיכרון הווירטואלי"
 
 #: ../src/interface.c:222
 msgid "PID"
@@ -185,7 +185,7 @@ msgstr "הצגת הפקודה המלאה"
 
 #: ../src/interface.c:355
 msgid "Show memory used by cache as free"
-msgstr "הצגת הזכרון בו נעשה שימוש על ידי המטמון כחופשי"
+msgstr "הצגת הזיכרון בו נעשה שימוש על ידי המטמון כחופשי"
 
 #: ../src/interface.c:387
 msgid ""
