--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 15:31+0200\n"
-"PO-Revision-Date: 2012-01-24 22:55+0200\n"
+"PO-Revision-Date: 2012-10-24 15:32+0200\n"
 "Last-Translator: Steve <yorvik.ubunto@gmail.com>\n"
 "Language-Team: English/GB\n"
 "Language: en_GB\n"
@@ -57,7 +57,7 @@ msgstr "Really terminate the task?"
 
 #: ../src/callbacks.c:86
 msgid "Can't stop process self"
-msgstr ""
+msgstr "Can't stop process self"
 
 #: ../src/functions.c:148
 #, c-format
