--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.4.0-rc1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 15:31+0200\n"
-"PO-Revision-Date: 2012-04-16 06:29+0200\n"
+"PO-Revision-Date: 2012-10-26 02:02+0200\n"
 "Last-Translator: Walter <wwycheuk@gmail.com>\n"
 "Language-Team: Tradictional Chinese <zh-l10n@linux.org.tw>\n"
 "Language: zh_TW\n"
@@ -29,7 +29,7 @@ msgstr "管理執行中的程式"
 
 #: ../lxtask.desktop.in.h:3
 msgid "Process manager"
-msgstr "工作管理員"
+msgstr "程式管理員"
 
 #: ../src/xfce-taskmanager-linux.c:284
 #, c-format
@@ -38,26 +38,26 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
-"無法發送訊息 %d 給工作 %d\n"
+"無法發送 %d 訊號給 %d 號工作\n"
 "\n"
 "%s"
 
 #: ../src/xfce-taskmanager-linux.c:298
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr "無法變更工作 %2$d 的優先權到 %1$d"
+msgstr "無法將 %2$d 號工作的優先權設定為 %1$d"
 
 #: ../src/callbacks.c:58
 msgid "Really kill the task?"
-msgstr "確定強行中止這個程式？"
+msgstr "確定強行終止這個程式？"
 
 #: ../src/callbacks.c:62
 msgid "Really terminate the task?"
-msgstr "確定終止這個程式？"
+msgstr "確定結束這個工作？"
 
 #: ../src/callbacks.c:86
 msgid "Can't stop process self"
-msgstr ""
+msgstr "無法暫停程式本身"
 
 #: ../src/functions.c:148
 #, c-format
@@ -131,7 +131,7 @@ msgstr "PPID"
 
 #: ../src/interface.c:256
 msgid "Stop"
-msgstr "停止"
+msgstr "暫停"
 
 #: ../src/interface.c:261
 msgid "Continue"
@@ -139,11 +139,11 @@ msgstr "繼續"
 
 #: ../src/interface.c:266
 msgid "Term"
-msgstr "終止"
+msgstr "結束"
 
 #: ../src/interface.c:271
 msgid "Kill"
-msgstr "強行中止"
+msgstr "強行終止"
 
 #: ../src/interface.c:276
 msgid "Priority"
@@ -159,7 +159,7 @@ msgstr "減5"
 
 #: ../src/interface.c:299
 msgid "    0"
-msgstr "____0"
+msgstr "    0"
 
 #: ../src/interface.c:304
 msgid "   5"
@@ -194,17 +194,19 @@ msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
-"LXTask 是由 Xfce4 Task Manager 改作，其原作者為:\n"
+"LXTask 是由 Xfce4 Task Manager 改成，其原作者為:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace this string with your names, one name per line.
 #: ../src/interface.c:392
 msgid "translator-credits"
-msgstr "洪任諭 <pcman.tw@gmail.com>"
+msgstr ""
+"洪任諭 <pcman.tw@gmail.com>\n"
+"Walter Cheuk <wwycheuk@gmail.com>"
 
 #: ../src/interface.c:401 ../src/interface.c:403
 msgid "LXTask"
-msgstr "LXTask"
+msgstr "LXTask 工作管理員"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:406
