Commit from LXDE Translation Project with Pootle by user smarquespt.: 50 of 50 messages translated (0 fuzzy).

--- a/po/pt.po
+++ b/po/pt.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 15:31+0200\n"
-"PO-Revision-Date: 2012-10-07 02:51+0200\n"
+"PO-Revision-Date: 2012-10-29 12:15+0200\n"
 "Last-Translator: Sérgio <smarquespt@gmail.com>\n"
 "Language-Team: Portuguese PT\n"
 "Language: pt\n"
@@ -237,4 +237,4 @@ msgstr "Erro"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr "Confirmar"
+msgstr "Confirmação"
