--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: lxtask 0.1.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 15:31+0200\n"
-"PO-Revision-Date: 2012-01-06 02:02+0200\n"
+"PO-Revision-Date: 2012-10-13 20:29+0200\n"
 "Last-Translator: Henrique P. <zehrique@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar2.conectiva.com.br>\n"
 "Language: pt_BR\n"
@@ -60,7 +60,7 @@ msgstr "Terminar realmente a tarefa?"
 
 #: ../src/callbacks.c:86
 msgid "Can't stop process self"
-msgstr ""
+msgstr "Não pode parar seu próprio processo"
 
 #: ../src/functions.c:148
 #, c-format
@@ -206,7 +206,7 @@ msgid "translator-credits"
 msgstr ""
 "Adriano Winter Bess <adriano@xfce.org>\n"
 "Pablo Galletti Vieira <pbgozer@gmail.com>\n"
-"Henrique P. Machado <zehrique@gmail.com>\n"
+"Henrique P. Machado <hpmachado@gnome.org>\n"
 "Sérgio Cipolla <secipolla@gmail.com>"
 
 #: ../src/interface.c:401 ../src/interface.c:403
