--- a/po/ru.po
+++ b/po/ru.po
@@ -9,15 +9,15 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.4.0-rc1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 15:31+0200\n"
-"PO-Revision-Date: 2012-01-09 15:04+0200\n"
-"Last-Translator: Max <mpui@tut.by>\n"
+"PO-Revision-Date: 2012-10-02 19:39+0200\n"
+"Last-Translator: Alexander <kazancas@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.0.5\n"
 
 #: ../lxtask.desktop.in.h:1 ../src/interface.c:55
@@ -58,7 +58,7 @@ msgstr "Снять выбранный процесс?"
 
 #: ../src/callbacks.c:86
 msgid "Can't stop process self"
-msgstr ""
+msgstr "Нельзя остановить самого себя"
 
 #: ../src/functions.c:148
 #, c-format
