--- a/po/tr.po
+++ b/po/tr.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 15:31+0200\n"
-"PO-Revision-Date: 2012-05-06 11:39+0200\n"
+"PO-Revision-Date: 2012-10-08 12:37+0200\n"
 "Last-Translator: Necdet <necdetyucel@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: tr\n"
@@ -56,7 +56,7 @@ msgstr "Görevi gerçekten sonlandırmak istiyor musunuz?"
 
 #: ../src/callbacks.c:86
 msgid "Can't stop process self"
-msgstr ""
+msgstr "Süreç sonlandırılamadı"
 
 #: ../src/functions.c:148
 #, c-format
