--- a/po/ug.po
+++ b/po/ug.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 15:31+0200\n"
-"PO-Revision-Date: 2012-01-11 14:27+0200\n"
+"PO-Revision-Date: 2012-09-28 09:37+0200\n"
 "Last-Translator: Gheyret <gheyret@gmail.com>\n"
 "Language-Team: Uyghur Computer Science Association <UKIJ@yahoogroups.com>\n"
 "Language: ug\n"
@@ -56,7 +56,7 @@ msgstr "ۋەزىپىنى راستلا توختىتامسىز؟"
 
 #: ../src/callbacks.c:86
 msgid "Can't stop process self"
-msgstr ""
+msgstr "ئىجرانىڭ ئۆزىنى توختاتقىلى بولمايدۇ"
 
 #: ../src/functions.c:148
 #, c-format
